--- a/requirements.txt
+++ b/requirements.txt
@@ -4,9 +4,6 @@ certifi==2020.6.20
 cffi==1.14.0
 Django==3.0.7
 djangorestframework==3.11.0
-flake8==3.8.2
-flake8-polyfill==1.0.2
-flake8-quotes @ file:///home/conda/feedstock_root/build_artifacts/flake8-quotes_1589330264223/work
 importlib-metadata==1.6.0
 mccabe==0.6.1
 mkl-fft==1.0.15
@@ -18,7 +15,6 @@ olefile==0.46
 opencv-contrib-python==4.2.0.34
 packaging==20.3
 pandas==1.0.4
-pdf2image @ file:///home/conda/feedstock_root/build_artifacts/pdf2image_1588278609827/work
 pep8-naming==0.8.2
 Pillow==7.1.2
 pluggy==0.13.1
@@ -37,3 +33,5 @@ torch==1.3.1
 torchvision==0.4.2
 wcwidth==0.1.9
 zipp==3.1.0
+gunicorn==19.7.1
+
